fix jwt
토큰 발급 로직 수정